added register and login functions

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,3 +1,39 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import "tailwindcss";
+@plugin "daisyui";
+@plugin "daisyui/theme" {
+  name: "primal";
+  default: true;
+  prefersdark: false;
+  color-scheme: "light";
+  --color-base-100: #FAFAF9;
+  --color-base-200: #F1F1EF;
+  --color-base-300: #E3E3E0;
+  --color-base-content: oklch(19.162% 0 0);
+  --color-primary: #7A1F1F;
+  --color-primary-content: oklch(88.144% 0.032 17.53);
+  --color-secondary: #8B6B3E;
+  --color-secondary-content: oklch(12.335% 0.033 23.865);
+  --color-accent: #C5532D;
+  --color-accent-content: oklch(14.685% 0.018 60.729);
+  --color-neutral: #2A2420;
+  --color-neutral-content: oklch(90.873% 0.007 51.902);
+  --color-info: #5E7C88;
+  --color-info-content: oklch(13.844% 0.019 207.284);
+  --color-success: #4C7A4B;
+  --color-success-content: oklch(12.199% 0.016 174.616);
+  --color-warning: #C47A2C;
+  --color-warning-content: oklch(14.016% 0.032 56.844);
+  --color-error: #8C2F2F;
+  --color-error-content: oklch(90.614% 0.048 24.16);
+  --radius-selector: 1rem;
+  --radius-field: 0.5rem;
+  --radius-box: 1rem;
+  --size-selector: 0.25rem;
+  --size-field: 0.25rem;
+  --border: 1px;
+  --depth: 1;
+  --noise: 0;
+}
+
